src/objects/EBC_Statistic__c.object
<CustomObject>
    <description>Object to hold all eBroadcast statistics to improve the response time for &quot;Refresh Count&quot;</description>
    <fields>
        <fullName>Agency_Counter__c</fullName>
        <description>This field will hold the Agency statistic count depending on the &quot;Key&quot; field.</description>
        <inlineHelpText>This field will hold the Agency statistic count depending on the &quot;Key&quot; field.</inlineHelpText>
        <label>Agency Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Counter__c</fullName>
        <description>This field will hold the ID Card statistic count depending on the &quot;Key&quot; field.</description>
        <inlineHelpText>This field will hold the ID Card statistic count depending on the &quot;Key&quot; field.</inlineHelpText>
        <label>Agent Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <label>Continent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>this field holds the name of the country related to the Key</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>This field will hold the statistic unique key by City or Continent.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field will hold the statistic unique key by City or Continent.</inlineHelpText>
        <label>Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Continent__c</fullName>
        <label>Sub-Continent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EBC Statistic</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>EBC Statistic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBC Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>